--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 .h2 {
   text-align: center;
+  font-family: "Arial";
 }
 .h3 {
   text-align: center;
+  font-family: "Arial";
+}
+.p {
+  text-align: center;
+  font-family: "Arial";
 }
