--- a/style.css
+++ b/style.css
@@ -10,3 +10,13 @@
   text-align: center;
   font-family: "Arial";
 }
+.image {
+  position: relative;
+  text-align: center;
+  color: white;
+}
+.top-left {
+  position: absolute;
+  top: 8px;
+  left: 16px;
+}
