--- a/style.css
+++ b/style.css
@@ -20,3 +20,13 @@
   top: 8px;
   left: 16px;
 }
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
